--- a/src/App.css
+++ b/src/App.css
@@ -194,3 +194,9 @@ h1 {
   margin-left: auto;
   margin-right:auto;
 }
+
+.meeting-list-item {
+  color: black;
+  background-color: white;
+  text-decoration: none;
+}
