--- a/src/App.css
+++ b/src/App.css
@@ -204,3 +204,13 @@ h1 {
   background-color: white;
   text-decoration: none;
 }
+
+.movie-card {
+  opacity: 0.6;
+  transition: opacity 0.6s;
+  z-index: 3;
+}
+
+.hide {
+  display: none;
+}
