--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ aside {
   }
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: reross-quadratic,sans-serif;
   font-weight: 400;
   font-style: normal;
