--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ aside {
   margin-right: auto; */
 }
 
-@media (max-width: 767px) {                                  
+@media (max-width: 1224px) {                                  
   .page-left {
     display: none;
   }
@@ -128,14 +128,15 @@ aside {
   #lightbulb-gif {
     display: none;
   }
-
+/* 
   .site-logo {
     display: none;
-  }
+  } */
 
   .movie-backdrop {
     display: none;
   }
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -148,6 +149,44 @@ p, div, section {
   font-family: futura-pt, sans-serif;
   font-weight: 500;
   font-style: normal;
+}
+
+.index-heading {
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 100px;
+  position: relative;
+  left: 220px;
+  top: 50px;
+  width: 70%;
+}
+
+.index-container {
+  background-color: #EFEFEF;
+  width: 80%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-top:50px;
+}
+
+.page-normal-margin {
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 50px;
+}
+
+.card-white {
+  background-color: white;
+  padding-top:40px;
+  padding-bottom:40px;
+}
+
+.internal-card-white {
+  background-color: white;
+  padding-top:40px;
+  padding-bottom:40px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .read-more-btn {
@@ -165,11 +204,13 @@ p, div, section {
 }
 
 .home-image {
-  margin: auto;
+  /* margin: auto; */
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   padding-top: 70px;
   background-color: #E0E0E0;
-  width: 70%;
+  width: 80%;
   border-radius: 30px;
 }
 
