Installed DraftJS to add rich text editor

--- a/src/App.css
+++ b/src/App.css
@@ -273,3 +273,16 @@ p, div, section {
 .light-box {
   font-family: 'Anton', sans-serif;
 }
+
+.editorContainer {
+  padding: 1em;
+  margin: 1em;
+}
+
+.editors {
+  border: 1px blue solid;
+  padding: 1em;
+  margin: 1em;
+  font-family: 'Open Sans';
+  font-size: 90%;
+}
